db cahnges and authentications

--- a/crud1/Web.config
+++ b/crud1/Web.config
@@ -11,12 +11,20 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-crud1-20170719050408.mdf;Initial Catalog=aspnet-crud1-20170719050408;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="crud1Context" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=crud1Context-20170722182233; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|crud1Context-20170722182233.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AppId" value="367282740341519"/>
+    <add key="AppSecret" value="5ddf5fb64491777026c46365de015158"/>
+    <!--<add xdt:Transform="Insert" key="AppId" value="367282740341519"/>
+    <add xdt:Transform="Insert" key="AppSecret" value="5ddf5fb64491777026c46365de015158"/>-->
+
+
   </appSettings>
   <system.web>
     <authentication mode="None" />
