--- a/crud1/Web.Release.config
+++ b/crud1/Web.Release.config
@@ -14,12 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-  <appSettings>
+  <!--<appSettings>
     <add key="AppId" value="367282740341519" xdt:Transform="Remove"/>
     <add key="AppSecret" value="5ddf5fb64491777026c46365de015158" xdt:Transform="Remove"/>
   <add key="AppId" value="367282740341519" xdt:Transform="Insert"/>
     <add key="AppSecret" value="5ddf5fb64491777026c46365de015158" xdt:Transform="Insert"/>
-  </appSettings>
+  </appSettings>-->
     
   <connectionStrings>
     <add name="DefaultConnection" xdt:Transform="Replace"
